syntax = "proto3";

option csharp_namespace = "eCommerce.UserService.Protos";

package userservice;

message HealthCheckRequest 
{
}

message HealthCheckResponse
{
     string status = 1;
     string version = 2;
}

message RegisterUserRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message UserResponse {
    string id = 1;
    string username = 2;
    string email = 3;
}

service UserService {
    rpc RegisterUser(RegisterUserRequest) returns (UserResponse);
    rpc CheckHealth (HealthCheckRequest) returns (HealthCheckResponse);
}
